{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 8,
  "lineage": "ae7f30c1-79cb-5b51-41ed-3261846849e3",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "micro-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sock-app/sock-app",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "name": "front-end"
                },
                "name": "sock-app",
                "namespace": "sock-app",
                "resource_version": "229773",
                "uid": "d193c358-c921-429c-bb01-c60aa6749ed3"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "socks-shop.olabodeadetula.me",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "front-end",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "voting-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/azure-vote-front",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {
                  "name": "azure-vote-front"
                },
                "name": "azure-vote-front",
                "namespace": "default",
                "resource_version": "229287",
                "uid": "2de9d236-8722-44c7-9257-3c80bd6fab36"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "vote.olabodeadetula.me",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "azure-vote-front",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a34a3df654c4c4a53adea8f4ed94870c-246141973.eu-west-2.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.exam"
          ]
        }
      ]
    }
  ]
}